# socket_io_client

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.en.md  README.md
doc/: engine-io-protocol.md  integration-test-plan.md  integration-test-report.md  socket-io-protocol.md
examples/client_test/: Cargo.toml
examples/client_test/src/: main.rs  socketio_client.rs
examples/server_test/: Cargo.toml
examples/server_test/src/: app.rs  browser_sio.rs  lib.rs  main.rs
examples/server_test/src/server/: logs.rs  mod.rs  socketio_server.rs
examples/server_test/style/: main.scss
src/: client_app.rs  client_socket_ref.rs  codec.rs  extractor.rs  lib.rs  socket_io_client.rs
tests/: codec.rs  integration_tests.rs  socket_io_client.rs
