[package]
name = "socket_io_client"
description = "A Socket.IO client implemented in Rust. It implements Engine.IO v4 and Socket.IO v5, and includes paired examples with socketioxide."
version = "0.4.0"
edition = "2024"
authors = ["ghost dev <xsmyqf@gmail.com>"]
license = "MIT"
homepage = "https://github.com/xsmyqf/socket_io_client"
repository = "https://github.com/xsmyqf/socket_io_client"
documentation = "https://docs.rs/socket_io_client" 
keywords = ["websockets", "networking","socketio","socket_io_client"]
categories = ["network-programming"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
axum = "0.8.9"
bytes = { version = "1.11.1", features = ["serde"] }
socketioxide = "0.18.3"
tokio-test = "0.4.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
