[package]
name = "client_test"
version = "0.1.0"
edition = "2021"

[dependencies]
socket_io_client = { path = "../.." }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
